--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -1,7 +1,7 @@
 .find-hotel {
   width: 320px;
   box-sizing: border-box;
-  padding: 38px 18px 49px 18px;
+  padding: 45px 16px 49px 18px;
 }
 
 @media (min-width: @tablet-width) {
@@ -41,7 +41,8 @@
 
 .find-hotel__title {
   .text-block__title();
-  margin-bottom: 30px;
+  font-size: 21px;
+  margin-bottom: 19px;
 }
 
 @media (min-width: @tablet-width) {
@@ -60,7 +61,7 @@
 
 .find-hotel__description {
   .text-block__description();
-  margin-bottom: 34px;
+  margin-bottom: 32px;
 
   br {
     display: none;
