--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,6 @@
 .social__list {
   list-style-type: none;
-  margin: 34px 0 40px 0;
+  margin: 34px -5px 40px 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
