--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -2,7 +2,7 @@
   position: relative;
   width: 320px;
   box-sizing: border-box;
-  padding: 32px 19px 53px 19px;
+  padding: 34px 26px 39px 19px;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -41,19 +41,28 @@
   }
 }
 
-.text-block__title {
+.about-sedona__title {
   .text-block__title ();
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 35px;
+
+  br{
+    display: block;
+  }
 }
-/*7 задание начало*/
+
 @media (min-width: @desktop-width) {
-.text-block__title {
+.about-sedona__title  {
   font-size: 21px;
   text-indent: -1px;
+  margin-bottom: 30px;
+
+  br{
+    display: none;
+  }
 }
 }
-/*7 задание конец*/
+
 
 .text-block__description {
   .text-block__description ();
