Pixel perfect index tablet

--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -51,6 +51,18 @@
   }
 }
 
+@media (min-width: @tablet-width) {
+  .about-sedona__title  {
+    font-size: 21px;
+    text-indent: -1px;
+    margin-bottom: 30px;
+
+    br{
+      display: none;
+    }
+  }
+  }
+
 @media (min-width: @desktop-width) {
 .about-sedona__title  {
   font-size: 21px;
