--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -48,7 +48,8 @@
 @media (min-width: @tablet-width) {
   .find-hotel__title {
     .text-block__title();
-    margin-bottom: 37px;
+    font-size: 30px;
+    margin-bottom: 32px;
   }
 }
 
@@ -72,6 +73,9 @@
   .find-hotel__description {
     .text-block__description();
     margin-bottom: 40px;
+    br {
+      display: block;
+    }
   }
 }
 
