--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -6,6 +6,14 @@
   flex-wrap: wrap;
 }
 
+@media (min-width: @tablet-width) {
+  .social__list {
+min-width: 156px;
+padding-top: 5px;
+padding-right: 12px;
+  }
+}
+
 
 @media (min-width: @desktop-width) {
 .social__list {
