--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -13,7 +13,7 @@
     width: 768px;
     flex-direction: row;
     justify-content: space-between;
-    padding: 36px 45px 36px 60px;
+    padding: 0 45px 36px 60px;
   }
 }
 
