--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,3 +1,9 @@
+@media (min-width: @tablet-width) {
+.html-academy {
+margin-right: 15px;
+}
+}
+
 .html-academy__link {
   display: flex;
   align-items: center;
@@ -29,3 +35,5 @@
 .html-academy__link:active .html-academy__img {
   fill: @marron-social;
 }
+
+
