Pixel perfect catalog

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -211,7 +211,7 @@
     background-image: url("../img/icons/burger-desktop.svg");
     background-repeat: no-repeat;
     background-position: 161px 63px;
-    padding: 158px 42px 79px 46px;
+    padding: 158px 43px 79px 44px;
 br {
   display: block;
 }
@@ -273,7 +273,7 @@ br {
 @media (min-width: @desktop-width) {
 .advantages__title {
  font-size: 21px;
-  margin-bottom: 14px;
+  margin-bottom: 12px;
  br {
   display: block;
  }
@@ -404,6 +404,14 @@ br{
 }
 }
 }
+
+@media (min-width: @desktop-width) {
+  .advantages__description--souvenir {
+  br{
+    display: block;
+  }
+  }
+  }
 
 @media (min-width: @tablet-width) {
 .advantages__description--road {
