--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -4,6 +4,12 @@ margin-right: 15px;
 }
 }
 
+@media (min-width: @desktop-width) {
+  .html-academy {
+  margin-right: 0;
+  }
+  }
+
 .html-academy__link {
   display: flex;
   align-items: center;
