Pixel perfect forms mobile

--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -22,10 +22,10 @@
   .about-catalog::after {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 0px;
     content: url("../img/triangle-mobile.svg");
     padding: 0;
-    margin-top: -57px;
+    margin-top: -56px;
     width: 321px;
   }
 }
