--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -1,6 +1,6 @@
 .about-form {
   box-sizing: border-box;
-  padding: 36px 20px 28px 20px;
+  padding: 35px 19px 28px 20px;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -15,7 +15,7 @@
     top: 0;
     content: url("../img/triangle-mobile.svg");
     padding: 0;
-    margin-top: -57px;
+    margin-top: -56px;
     width: 321px;
   }
 }
@@ -39,6 +39,7 @@
 
 .about-form__title {
   .text-block__title();
+  margin-bottom: 24px;
 }
 
 @media (min-width: @tablet-width) {
