Pixel Perfect forms tablet

--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -25,7 +25,7 @@
   .about-form {
     width: 768px;
     box-sizing: border-box;
-    padding: 64px 166px 102px 166px;
+    padding: 64px 166px 98px 166px;
   }
 }
 
@@ -46,6 +46,7 @@
   .about-form__title {
     .text-block__title ();
     font-size: 30px;
+    margin-bottom: 20px;
   }
 }
 
