--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -11,35 +11,24 @@ margin-right: 15px;
   }
 
 .html-academy__link {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-
-.html-academy__description {
   .text-block__description();
-  margin-right: 12px;
+  text-decoration: none;
+  vertical-align: middle;
 }
 
 
-.html-academy__link:hover .html-academy__description {
+.html-academy__link:hover  {
   color: @blue;
 }
 
-.html-academy__link:active .html-academy__description {
+.html-academy__link:active  {
   color: @marron-social;
 }
 
+
 .html-academy__img {
-  fill: @black;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  margin-left: 8px;
 }
-
-.html-academy__link:hover .html-academy__img {
-  fill: @blue;
-}
-
-.html-academy__link:active .html-academy__img {
-  fill: @marron-social;
-}
-
-
