--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,9 +8,9 @@
 
 @media (min-width: @tablet-width) {
   .social__list {
+margin: 0;
 min-width: 156px;
-padding-top: 5px;
-padding-right: 12px;
+
   }
 }
 
