Pixel perfect modal and social list

--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -33,7 +33,7 @@
   .about-form {
     width: 1200px;
     box-sizing: border-box;
-    padding: 115px 383px 67px 383px;
+    padding: 113px 380px 60px 380px;
   }
 }
 
@@ -54,6 +54,7 @@
   .about-form__title {
     .text-block__title ();
     font-size: 30px;
+    margin-bottom: 30px;
   }
 }
 
