--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,19 +8,21 @@
 
 @media (min-width: @tablet-width) {
   .social__list {
-margin: 0;
-min-width: 156px;
+    margin: 0;
+    margin-left: -5px;
+    min-width: 156px;
 
   }
 }
 
 
 @media (min-width: @desktop-width) {
-.social__list {
-  margin: 0;
-  padding: 0;
-  min-width: 156px;
-}
+  .social__list {
+    margin: 0;
+    margin-left: -5px;
+    padding: 0;
+    min-width: 156px;
+  }
 }
 
 .social__button {
